# genkit-python-samples

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  biome.json  captainhook.json  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: engdoc.yml  formatter.yml  python.yml
apps/genkit-chat/: GEMINI.md  pyproject.toml
apps/genkit-chat/backend/: pyproject.toml
apps/genkit-chat/backend/src/: genkit_setup.py
apps/genkit-chat/frontend/: package.json  tsconfig.json
apps/genkit-chat/frontend/src/app/features/chat/: chat.component.ts
docs/: index.md
