# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[project]
authors = [{ name = "Google" }]
dependencies = [
  "liccheck>=0.9.2",
  "mcp>=1.25.0",
  "python-multipart>=0.0.22",
  "strenum>=0.4.15; python_version < '3.11'",
]
description = "Workspace for Genkit Python Samples"
license = "Apache-2.0"
name = "genkit-python-samples-workspace"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[dependency-groups]
dev = [
  "bpython>=0.25",
  "ipython~=8.22; python_version <= '3.10'",
  "ipython~=9.0.2; python_version >= '3.11'",
  "jupyter>=1.1.1",
  "pytest-asyncio>=0.25.3",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "datamodel-code-generator>=0.27.3",
  "pytest-watcher>=0.4.3",
  "pytest-mock>=3.14.0",
  "twine>=6.1.0",
  "poethepoet>=0.33.1",
  "pip>=25.0.1",
  "tox>=4.25.0",
  "tox-uv>=1.25.0",
  "nox>=2025.2.9",
  "nox-uv>=0.2.2",
]

lint = [
  "bandit>=1.7.0",
  "deptry>=0.22.0",
  "mypy>=1.14.0",
  "pip-audit>=2.7.0",
  "pypdf>=6.6.2",
  "pyrefly>=0.15.0",
  "pyright>=1.1.392",
  "pysentry-rs>=0.3.14",
  "ruff>=0.9",
  "strenum>=0.4.15",
  "streamlit>=1.41.0",
  "ty>=0.0.1",
  "typos>=1.42.0",
]

[tool.hatch.build.targets.wheel]

[tool.setuptools]
py-modules = []

# Pytest for unit testing and coverage.
[tool.pytest]

[tool.pytest.ini_options]
addopts = [
  "--cov",
  #"--cov-report=", # Disable terminal report generation by pytest-cov
  "-ra",
  "-vv",
]
asyncio_default_fixture_loop_scope = "session"
norecursedirs = [".git", ".tox", ".nox", ".venv", "build", "dist"]
python_files = ["*_test.py"]
testpaths = ["apps"]
#asyncio_mode = "auto"
asyncio_mode = "strict"

[tool.coverage.report]
fail_under = 78

[tool.coverage.run]
omit = [
  "**/__init__.py",  # Often contains just imports
  "**/testing.py",   # Test utilities
  "**/constants.py", # Typically just constants
  "**/typing.py",    # Often auto-generated or complex types
  "**/types.py",     # Often auto-generated or complex types
]
source = ["apps"]

# uv based package management.
[tool.uv]
default-groups = ["dev", "lint"]

[tool.uv.sources]
# Add apps here as they are added

[tool.uv.workspace]
members = ["apps/*"]

# Ruff checks and formatting.
[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "bazel-*",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
indent-width = 4
line-length = 120
preview = true
target-version = "py310"
unsafe-fixes = true


[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
  "S101", # assert used - we use assert for type narrowing and tests
  "S105", # hardcoded password string - false positives in tests
  "S106", # hardcoded password func arg - false positives in tests
  "S311", # random not for security - we don't use random for crypto
]
select = [
  "E",     # pycodestyle (errors)
  "W",     # pycodestyle (warnings)
  "F",     # pyflakes
  "I",     # isort (import sorting)
  "UP",    # pyupgrade (Python version upgrades)
  "B",     # flake8-bugbear (common bugs)
  "N",     # pep8-naming (naming conventions)
  "D",     # pydocstyle
  "ANN",   # flake8-annotations (type hints)
  "F401",  # unused imports
  "F403",  # wildcard imports
  "F841",  # unused variables
  "S",     # flake8-bandit (security)
  "ASYNC", # flake8-async (async best practices)
  "T20",   # flake8-print (no print statements)
]

[tool.ruff.lint.per-file-ignores]
# Samples have install_rich_traceback() call after imports, before other code
# Samples are demo code and can use blocking I/O for simplicity
"apps/*/*.py"     = ["E402", "ASYNC"]
"apps/*/**/*.py"  = ["E402", "ASYNC"]
"apps/*/src/*.py" = ["E402", "ASYNC"]


[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["genkit"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format      = true
docstring-code-line-length = 120
indent-style               = "space"
line-ending                = "lf"
quote-style                = "single"
skip-magic-trailing-comma  = false

[tool.liccheck]
authorized_licenses = [
  "3-clause bsd",
  "apache 2.0",
  "apache software license",
  "apache software",
  "apache",
  "apache-2.0",
  "bsd license",
  "bsd-3-clause",
  "bsd",
  "cmu license (mit-cmu)",
  "isc license (iscl)",
  "isc license",
  "mit license",
  "mit",
  "mit-cmu",
  "new bsd license",
  "new bsd",
  "psf-2.0",
  "python software foundation license",
  "simplified bsd",
  "the unlicense (unlicense)",          # TODO: verify.
  "bsd-2-clause",
  "apache license 2.0",
  "apache-2.0 and mit",
  "mpl-2.0 and mit",                    # tqdm uses this dual license
]
dependencies = true
unauthorized_licenses = [
  "gnu lgpl",
  "gpl v3",
  "lgpl with exceptions or zpl",
  "zpl 2.1",
  "mpl",
]

[tool.liccheck.authorized_packages]
aiohappyeyeballs      = "2.6.1"    # Python Software Foundation
aiohttp               = "3.13.3"   # Apache-2.0 AND MIT
certifi               = "2026.1.4" # TODO: Verify.
dependencies          = true
dotpromptz-handlebars = "0.1.8"    # Apache-2.0
google-crc32c         = "1.8.0"    # Apache-2.0
mistralai             = ">=1.9.11" # Apache-2.0
multidict             = "6.7.0"    # Apache-2.0
ollama                = "0.5.1"    # MIT
pyasn1                = "0.6.2"    # BSD-2-Clause

# Ty (Astral/Ruff) type checking configuration.
[tool.ty.environment]
root = [
  ".",
]

# Pyright type checking configuration.
[tool.pyright]
exclude = [
  "**/__pycache__",
  ".git",
  ".mypy_cache",
  ".nox",
  ".pytest_cache",
  ".ruff_cache",
  ".tox",
  "build",
  "dist",
]
pythonVersion          = "3.10"
reportMissingImports   = true
reportMissingTypeStubs = false
typeCheckingMode       = "basic"
venv                   = ".venv"
venvPath               = "."

# Pyrefly type checking configuration (Meta's new type checker).
[tool.pyrefly]
project_excludes = [
  "**/__pycache__",
  ".git",
  ".mypy_cache",
  ".nox",
  ".pytest_cache",
  ".ruff_cache",
  ".tox",
  ".venv",
  "build",
  "dist",
]
project_includes = [
  "apps/*/src/**/*.py",
]

# Search path for first-party code import resolution.
search-path = [
  ".",
]
ignore-missing-imports = ["genkit.plugins.*"]
python_version         = "3.10"

# Treat warnings as errors.
[tool.pyrefly.errors]
deprecated     = "error"
redundant-cast = "error"
