# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[project]
dependencies = [
  "genkit",
  "genkit-plugin-google-genai",
  "genkit-plugin-vertex-ai",
  "genkit-plugin-anthropic",
  "genkit-plugin-compat-oai",
  "genkit-plugin-ollama",
  "genkit-plugin-cf-ai",
  "genkit-plugin-dev-local-vectorstore",
  "robyn>=0.68.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "uvloop>=0.21.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.28.0",
]
description = "Genkit Chat Backend - Multi-model AI chat server"
name = "genkit-chat-backend"
readme = "../README.md"
requires-python = ">=3.10"
version = "0.1.0"

[dependency-groups]
lint = ["ruff>=0.9.0", "ty>=0.0.1"]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.25.0"]

[tool.uv.sources]
genkit                              = { git = "https://github.com/firebase/genkit", subdirectory = "py/packages/genkit" }
genkit-plugin-anthropic             = { git = "https://github.com/firebase/genkit", subdirectory = "py/plugins/anthropic" }
genkit-plugin-cf-ai                 = { git = "https://github.com/firebase/genkit", subdirectory = "py/plugins/cf-ai" }
genkit-plugin-compat-oai            = { git = "https://github.com/firebase/genkit", subdirectory = "py/plugins/compat-oai" }
genkit-plugin-dev-local-vectorstore = { git = "https://github.com/firebase/genkit", subdirectory = "py/plugins/dev-local-vectorstore" }
genkit-plugin-google-genai          = { git = "https://github.com/firebase/genkit", subdirectory = "py/plugins/google-genai" }
genkit-plugin-ollama                = { git = "https://github.com/firebase/genkit", subdirectory = "py/plugins/ollama" }
genkit-plugin-vertex-ai             = { git = "https://github.com/firebase/genkit", subdirectory = "py/plugins/vertex-ai" }

[tool.pytest.ini_options]
addopts                            = ["-ra", "-vv"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode                       = "auto"
python_files                       = ["*_test.py"]
testpaths                          = ["tests"]

[tool.pyright]
exclude = [
  "**/__pycache__",
  ".git",
  ".mypy_cache",
  ".nox",
  ".pytest_cache",
  ".ruff_cache",
  ".tox",
  "build",
  "dist",
]
include                = ["src", "tests"]
pythonVersion          = "3.10"
reportMissingImports   = true
reportMissingTypeStubs = false
typeCheckingMode       = "basic"
venv                   = ".venv"
venvPath               = "."

# Ruff checks and formatting - matching genkit repo strict settings.
[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "bazel-*",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
indent-width   = 4
line-length    = 120
preview        = true
target-version = "py310"
unsafe-fixes   = true

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
  "S101", # assert used - we use assert for type narrowing and tests
  "S105", # hardcoded password string - false positives in tests
  "S106", # hardcoded password func arg - false positives in tests
  "S311", # random not for security - we don't use random for crypto
]
select = [
  "E",     # pycodestyle (errors)
  "W",     # pycodestyle (warnings)
  "F",     # pyflakes
  "I",     # isort (import sorting)
  "UP",    # pyupgrade (Python version upgrades)
  "B",     # flake8-bugbear (common bugs)
  "N",     # pep8-naming (naming conventions)
  "D",     # pydocstyle
  "ANN",   # flake8-annotations (type hints)
  "F401",  # unused imports
  "F403",  # wildcard imports
  "F841",  # unused variables
  "S",     # flake8-bandit (security)
  "ASYNC", # flake8-async (async best practices)
  "T20",   # flake8-print (no print statements)
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line  = false
known-first-party  = ["genkit"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format      = true
docstring-code-line-length = 120
indent-style               = "space"
line-ending                = "lf"
quote-style                = "single"
skip-magic-trailing-comma  = false

[tool.ty.environment]
root = ["src"]

# Pyrefly type checking configuration.
[tool.pyrefly]
project_excludes = [
  "**/__pycache__",
  ".git",
  ".mypy_cache",
  ".nox",
  ".pytest_cache",
  ".ruff_cache",
  ".tox",
  ".venv",
  "build",
  "dist",
]
project_includes = ["src/**/*.py", "tests/**/*.py"]
search-path = ["."]
ignore-missing-imports = ["genkit.plugins.*"]
python_version = "3.10"

# Treat warnings as errors.
[tool.pyrefly.errors]
deprecated     = "error"
redundant-cast = "error"
